# WeightedKNNClassifier

./: Makefile  README.md  pyproject.toml  setup.py
tests/estimators/: weightedknn_test.py
weightedknn/estimators/: weightedknn.py
